added seat selection
